# clickhome-migration

./: .deepsource.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
crates/ch-cli/: Cargo.toml
crates/ch-cli/src/: main.rs
crates/ch-core/: Cargo.toml
crates/ch-core/src/: config.rs  error.rs  hash.rs  lib.rs
crates/ch-core/src/types/: file.rs  import.rs  location.rs  mod.rs  model.rs  status.rs
crates/ch-scanner/: Cargo.toml
crates/ch-scanner/src/: analyzer.rs  cache.rs  error.rs  lib.rs  registry.rs  stats.rs  walker.rs
crates/ch-ts-parser/: Cargo.toml
crates/ch-ts-parser/src/: arena.rs  error.rs  exports.rs  import.rs  lib.rs  parser.rs  queries.rs  source.rs
crates/ch-tui/: Cargo.toml
crates/ch-tui/src/: action.rs  app.rs  editor.rs  error.rs  event.rs  lib.rs  theme.rs  toolchain.rs  tui.rs  ui.rs
crates/ch-tui/src/components/: detail_pane.rs  directory_input.rs  file_list.rs  filter_input.rs  header.rs  help.rs  mod.rs  stats_panel.rs  status_bar.rs
crates/ch-watcher/: Cargo.toml
crates/ch-watcher/src/: error.rs  events.rs  filter.rs  lib.rs  watcher.rs
docs/: ARCHITECTURE.md
xtask/: Cargo.toml
xtask/src/: main.rs
