[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Build automation tasks for the ch-migration workspace"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# CLI for xtask commands
clap.workspace = true

# Error handling
anyhow.workspace = true

# Path handling
camino.workspace = true

[lints]
workspace = true
