[package]
name = "ch-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types, errors, and utilities for ch-migration"

[dependencies]
# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Fast hashing (replacement for std HashMap/HashSet)
rustc-hash.workspace = true

# Path handling with guaranteed UTF-8
camino.workspace = true

# Compact vectors for small collections
smallvec.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
