[package]
name = "ch-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Filesystem scanner for TypeScript files with parallel analysis"

[dependencies]
# Internal crates
ch-core.workspace = true
ch-ts-parser.workspace = true

# File walking (respects .gitignore)
ignore.workspace = true

# Parallel processing
rayon.workspace = true

# Concurrent caching
parking_lot.workspace = true

# Arena allocation
bumpalo.workspace = true
bumpalo-herd.workspace = true

# Memory-efficient collections
smallvec.workspace = true

# Path handling
camino.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Fast hashing
rustc-hash.workspace = true

# Tracing
tracing.workspace = true

# Serialization (for StatsSnapshot)
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
