[package]
name = "ch-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "File watcher with debouncing and async event streaming"

[dependencies]
# Internal crates
ch-core.workspace = true

# File watching
notify.workspace = true
notify-debouncer-mini.workspace = true

# Async runtime (for channels and spawn_blocking)
tokio.workspace = true

# Path handling
camino.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true

# Collections
smallvec.workspace = true

# Serialization (for EventBatchStats)
serde.workspace = true

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3.14"

[lints]
workspace = true
